# pagewielder

./: .flake8  .gitignore  GNUmakefile  README.md  build.sh  flake.nix  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  main.yml  python-app.yml
pagewielder/: __init__.py  __main__.py  cli.py  core.py
pdf_tools/: __main__.py
