[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pagewielder"
version = "0.1.0"
description = "A tool for manipulating PDFs."
readme = "README.md"
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["pikepdf>=7.1.2"]

[project.optional-dependencies]
dev = ["flake8>=6.0.0", "black>=23.3.0", "pylint>=2.17"]

[project.scripts]
pagewielder = "pagewielder.__main__:main"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["pagewielder"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0414", # useless-import-alias, we use aliases for type checking
]
