[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pagewielder"
dynamic = ["version", "description"]
readme = "README.md"
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pikepdf>=7.1.2"]

[project.optional-dependencies]
dev = ["black>=23.3.0", "flake8>=6.0.0", "isort>=5.13.2", "mypy>=1.8.0", "pylint>=2.17"]
test = []
types = []

[project.scripts]
pagewielder = "pagewielder.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
warn_redundant_casts = false

[tool.isort]
profile = "black"
known_first_party = ["pagewielder"]
line_length = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0301", # line-too-long, we use black for formatting
    "C0414", # useless-import-alias, we use aliases for type checking
]

[tool.pyright]
strict = ["pagewielder", "tests"]
